<?xml version="1.0"?>
<package format="2">
  <name>barracuda_sonar</name>
  <version>0.0.1</version>
  <description>Launch-only package for sonar configuration and orchestration.</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>

</package>
