<?xml version="1.0"?>
<package format="3">
  <name>barracuda_sonar</name>
  <version>0.1.0</version>
  <description>ROS 2 launch and configuration package for the Barracuda sonar/altimeter stack.</description>

  <maintainer email="ghogari@usc.edu">Arsalan Ghogari, USC RoboSub</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Driver that this package launches -->
  <exec_depend>ping_altimeter_driver</exec_depend>

  <!-- Messages published by the driver -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

